# pdi-simulator

./: .gitignore  CHANGELOG.md  EXPERIMENTS.md  EXPERIMENT_001.md  EXPERIMENT_002.md  EXPERIMENT_003.md  EXPERIMENT_004.md  EXPERIMENT_005.md  EXPERIMENT_006.md  EXPERIMENT_006b.md  EXPERIMENT_007.md  EXPERIMENT_008.md  EXPERIMENT_009.md  README.md  ROADMAP.md  pyproject.toml
docs/: EXPERIMENT_TEMPLATE.md
scripts/: analyze_e004.py  analyze_e006.py  analyze_e006b.py  analyze_e007.py  analyze_e008.py  analyze_e009.py  analyze_robustness.py  compare_tiers.py  run_e004_verify_fix.sh  run_e005_cyclic_sweep.sh  run_e006_memory_temporal.sh  run_e007_no_coop_fitness.sh  run_e008_n20.sh  run_e008_resume.sh  run_robustness_sweep.sh
src/pdi/: __init__.py  agent.py  cognition.py  config.py  environment.py  evaluation.py  evolution.py  logging_utils.py  main.py  memory.py  schemas.py  social.py
src/pdi/environments/: __init__.py  base.py  cyclic.py  grid_world.py
tests/: test_agent.py  test_environment.py  test_environments.py  test_evolution.py  test_fitness_and_llm.py  test_memory_temporal.py  test_transfer_eval.py
